After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 679240 - Leaks gvariant on agent registration
Leaks gvariant on agent registration
Status: RESOLVED FIXED
Product: gnome-bluetooth
Classification: Core
Component: general
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-bluetooth-general-maint@gnome.bugs
gnome-bluetooth-general-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2012-07-02 07:03 UTC by Sjoerd Simons
Modified: 2012-07-02 10:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix gvariant leak on registration (1.20 KB, patch)
2012-07-02 07:04 UTC, Sjoerd Simons
committed Details | Review

Description Sjoerd Simons 2012-07-02 07:03:11 UTC
It looks like gnome-bluetooth was ported to gdbus in a not too great way. attached is a leak fix i noticed while looking through the code.
Comment 1 Sjoerd Simons 2012-07-02 07:04:01 UTC
Created attachment 217805 [details] [review]
Fix gvariant leak on registration
Comment 2 Bastien Nocera 2012-07-02 10:11:14 UTC
(In reply to comment #0)
> It looks like gnome-bluetooth was ported to gdbus in a not too great way.
> attached is a leak fix i noticed while looking through the code.

It was ported from crappy dbus-glib code without peer review if that's what you're asking.

commit 3c59b7eedbc395272c65a418fec049ae1cee0644
Author: Sjoerd Simons <sjoerd@luon.net>
Date:   Sun Jul 1 12:28:37 2012 +0200

    Fix memory leak when registering the agent
    
    https://bugzilla.gnome.org/show_bug.cgi?id=679240