Fix memory leak when registering the agent

https://bugzilla.gnome.org/show_bug.cgi?id=679240